<resources>
    <string name="app_name">FlashMemorize</string>
    <string name="main_bttn">OpenFile</string>
    <string name="main_msg">Welcome! Press the button below to open a file.</string>
    <string name="new_line_keyword">&#032;-</string>
    <string name="button_prev">PREV</string>
    <string name="button_next">NEXT</string>
    <string name="button_flip">FLIP</string>
    <string name="button_good">GOOD</string>
    <string name="button_bad">BAD</string>
    <string name="text_view">Empty</string>
    <string name="text_flip">" "</string>
    <string name="flashcard_no_repeat">No Repeat</string>
    <string name="flashcard_smart_learn">Smart learn</string>
    <string name="flashcard_random_flip">Random Flip</string>
    <string name="flashcard_flip_all_front">Flip All Front</string>
    <string name="flashcard_flip_all_back">Flip All Back</string>
    <string name="flashcard_reset_deck">Reset Deck</string>
    <string name="main_menu_open_deck">Edit</string>
    <string name="flashcard_shuffle">Shuffle</string>
    <string name="flashcard_display_id_field">ID:</string>
    <string name="flashcard_display_id_value">0</string>
    <string name="flash_card_display_totalcards_field">Total Cards:</string>
    <string name="flashcard_display_totalcards_value">0/0</string>
    <string name="menu_main_edit_delete">Edit List</string>
    <string name="flashcard_menu_stats">Current Card Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flashcard_dialog_number">Enter a number 0-500</string>
    <string name="flashcard_dialog_title">Number of Cards</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="flashcard_button_cancel">CANCEL</string>
    <string name="flashcard_button_done">DONE</string>
    <string name="flashcard_display_side_field">Side:</string>
    <string name="flashcard_display_side_value">Front</string>
    <string name="export">Export</string>
    <string name="name_deck">Name Deck</string>
    <string name="new_deck">New Deck</string>
    <string name="title_activity_settings">Settings</string>
    <string name="help_of_home">
①메뉴 아이콘: \n
메인 화면에서 접근할 수 있는 메뉴를 표시해 준다
->메뉴의 대한 설명은(메인 메뉴 화면)을 참조\n\n
②검색 문자 입력란\n
찾고 싶은 덱(Deck)을 검색할 수 있다. 입력한 문자가 하나라도 포함되어 있다면 해당하는 덱을 아래에 출력하도록 한다.\n
★주의: 한국어는 ‘ㄱ’, ‘ㄴ’는 인식가능 하지만 ‘가’, ‘나’ 와 같은 문자는 인식하지 않아 덱 이름으로 등록해도 검색할 수 없습니다.\n\n

③덱(Deck) 아이템:\n
사용자가 생성한 덱(Deck)이 표시\n
터치하면 카드 화면으로 이동하여 덱의 내용(Card)을 볼 수 있다.\n
★덱(Deck)이란?\n
사용자가 외우고 싶은 것을 기입한 카드(Card)들의 한 묵음으로 한 단위\n\n

④덱 받기\n
같은 앱을 사용하고 있는 사용자가 공유한 덱(확장자 .json)을 자신의 앱에 저장한다.\n
버튼을 누른 후 공유 받은 .json 파일은 터치하면 덱이 되어 표시된다.\n\n
</string>

    <string name="help_of_homemenu">

①덱 편집 기능\n
        덱을 삭제 모드의 On/Off을 변경할 수 있는 메뉴 버튼\n
누르면 On, 다시 누르면 Off로 할 수 있다.\n
이 동작은 (메인 메뉴)의 덱 아이템을 길게 눌려도 가능\n
삭제는 모드를 On으로 하면 출현하는 ‘X’ 버튼을 누르면 가능\n\n

②새로운 덱 생성기능\n
버튼을 누른 후 설정할 이름을 입력하여 ‘CONFIRM’을 누르면 새로운 덱이 생성된다.\n\n

③덱 공유 기능\n
가지고 있는 덱을 같은 application을 가지고 있는 사용자에게 공유하고 싶을 때 사용하는 기능\n
버튼을 누른 후 공유할 덱을 누르면 공유app 선택화면이 나온다.\n\n

④덱 이름 편집 기능\n
덱을 이름 편집 모드의 On/Off을 변경할 수 있는 메뉴 버튼\n
누르면 On, 다시 누르면 Off로 할 수 있다.\n
덱 이름을 편집 후 저장하려면 출현하는 저장 버튼을 누르면 된다.\n\n

        ⑤덱 통합 기능\n
누르면 덱 통합 화면에 이동한다.\n
1.	통합할 덱을 선택\n
2.	‘CONFIRM’ 버튼 터치\n
3.	통합한 새로운 덱의 이름을 입력\n
1~3을 수행하면 통합이 완료된다.\n\n

        ⑥설정 기능\n
누르면 설정 화면에 이동한다.\n
설정화면에서는 Card의 표시 폰트(문자) 크기를 설정할 수 있다\n\n

        ⑦알림 설정 기능\n
누르면 알림 설정 화면에 이동한다.\n
->이 기능의 설명은 (알림 설정 화면)을 참조\n\n

        ⑧설정 기능\n
누르면 각종 기능을 설명하고 있는 help화면으로 이동한다.\n
</string>

    <string name="help_of_card">
        ①메뉴 아이콘:\n
카드 화면에서 접근할 수 있는 메뉴를 표시해 준다\n
->카드 메뉴의 대한 설명은(카드 메뉴 화면)을 참조\n\n

②ID\n
현재 표시하고 있는 카드가 몇 번째 인지 표시\n\n

③Total Cards\n
현재 덱에 있는 총 카드 개수를 표시\n\n

④Side\n
현재 표시하고 있는 카드가 앞면(Front)인지 뒷면(Back)인지 표시\n\n

⑤Card 본체\n
Front/Back의 내용을 표시하는 부분\n
연속으로 2번 터치하면 Front -> Back으로 Back ->Front로 표시내용을 전환한다.\n\n

⑥PREV 버튼\n
이전 카드를 표시한다.\n
표시 카드가 처음 카드인 경우 마지막 카드를 표시\n\n

        ⑦GOOD 버튼\n
이해했다는 의사표시를 하여 다음 카드를 표시한다.\n
이 버튼을 을 누르면 ‘카드 공부 통계’ 기능에 영향을 미친다.\n\n

⑧GOOD 버튼\n
이해하지 못 했다는 의사표시를 하여 다음 카드를 표시한다.\n
이 버튼을 을 누르면 ‘카드 공부 통계’ 기능에 영향을 미친다.\n\n

⑨NEXT 버튼\n
다음 카드를 표시한다.\n
표시 카드가 마지막 카드인 경우 처음 카드를 표시\n
    </string>

    <string name="help_of_cardmenu">
        ①카드 공부 통계\n현재 표시 중인 카드 상태정보를 표시합니다. \n\n
        ②현재 카드 편집\n현재표시중인 카드내용을 편집합니다. \nNext와 prev로 다른 카드도 함께 편집이 가능합니다.\n\n
        ③카드에 사진 추가\n휴대폰 메모리에서 사진을 가져오고 카드안에 추가합니다.\n\n
        ④현재 사진 삭제\n현재 표시중인 카드안에 있는 사진을 삭제합니다.\n\n
        ⑤새 카드 추가\n자유롭게 편집하고 카드를 추가하세요.\n\n
        ⑥현재카드 삭제\n표시중인 카드를 삭제합니다. \n\n
        ⑦카드를 다른 덱에 추가\n현재 표시중인 카드를 다른 덱으로 복사합니다.\n\n
        ⑧홈-홈으로 돌아가기\n
    </string>

    <string name="help_of_alarm">
        ① 알림 아이템\n
사용자가 설정한 알람이 하나의 리스트 아이템으로 표시\n
설정한 시간, 제목, 요일을 한눈에 볼 수 있다.\n
아이템을 누르면 해당 아이템의 알림 설정을 편집 가능\n
->(알림 편집 화면)을 참조\n\n

②알람 아이템 리스트\n
생성한 알람은 여기에 리스트 형식으로 표시된다.\n\n

③알림 생성 버튼\n
누르면 알림 편집 화면으로 이동한다.\n
->알림 편집에 대한 설명은 (알림 편집 화면)을 참조\n
★주의: \n
이 버튼을 누르는 순간 강재적으로 알림 아이템이 생성되므로 생성을 취소하고 싶은 경우 편집화면에서 ‘삭제’ 버튼을 누르는 것을 권장한다.\n

    </string>
    
    <string name="help_of_alarm2">
        ①알림 설정 저장 버튼\n
편집화면의 내용을 저장하여 반영한다.\n\n

②알림 설정 삭제 버튼\n
현재 설정하고 있던 알림을 삭제한다.\n\n

③시간 설정 스피너\n
설정할 알림의 시간을 편집할 수 있는 부분\n\n

④제목 입력란\n
설정할 알림의 제목을 편집할 수 있는 부분\n\n

⑤알림 요일 설정 체크상자\n
체크한 요일에 알림이 오도록 설정하는 부분\n
★주의: 적어도 시간과 요일을 설정하지 않으면 알림은 작동하지 않는다.\n

    </string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="edit_alarm">알림 편집</string>
    <string name="add_alarm">알림 추가</string>
    <string name="update_complete">변경 및 저장 완료</string>
    <string name="update_failed">업대이트 실패</string>
    <string name="channel_name">Simple Alarms</string>
    <string name="delete_dialog_title">알람 삭제 확인</string>
    <string name="delete_dialog_content">이 알람을 삭제 하시겠습니까?</string>
    <string name="delete_complete">알림 삭제 완료</string>
    <string name="delete_failed">삭제 실페</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
